--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#1e1e1e" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -14,7 +13,7 @@
 
     <title>MMQN</title>
   </head>
-  <body style="background-color: #1e1e1e;">
+  <body>
     <noscript>
       <p style="font-family: monospace; color: #e4c200;">
         You need to enable JavaScript to run this app.
